--- a/healify/src/Components/Signup.module.css
+++ b/healify/src/Components/Signup.module.css
@@ -1,42 +1,5 @@
-body {
-  color: #000;
-  overflow-x: hidden;
-  height: 100%;
-  background-image: linear-gradient(to right, #d500f9, #ffd54f);
-  background-repeat: no-repeat;
+.container {
 }
-
-input,
-textarea {
-  background-color: #f3e5f5;
-  border-radius: 50px !important;
-  padding: 12px 15px 12px 15px !important;
-  width: 100%;
-  box-sizing: border-box;
-  border: none !important;
-  border: 1px solid #f3e5f5 !important;
-  font-size: 16px !important;
-  color: #000 !important;
-  font-weight: 400;
-}
-
-input:focus,
-textarea:focus {
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  border: 1px solid #d500f9 !important;
-  outline-width: 0;
-  font-weight: 400;
-}
-
-button:focus {
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  outline-width: 0;
-}
-
 .card {
   border-radius: 0;
   border: none;
@@ -61,20 +24,7 @@ button:focus {
   margin-bottom: 60px !important;
 }
 
-::placeholder {
-  color: rgba(201, 201, 201, 0.781) !important;
-  opacity: 1;
-}
-
-:-ms-input-placeholder {
-  color: #000 !important;
-}
-
-::-ms-input-placeholder {
-  color: #000 !important;
-}
-
-.form-control-label {
+.formControlLabel {
   font-size: 12px;
   margin-left: 15px;
 }
@@ -84,7 +34,7 @@ button:focus {
   margin-bottom: 30px;
 }
 
-.btn-color {
+.btnColor {
   border-radius: 50px;
   color: #fff;
   background-image: linear-gradient(to right, #ffd54f, #d500f9);
@@ -94,12 +44,12 @@ button:focus {
   margin-top: 40px;
 }
 
-.btn-color:hover {
+.btnColor:hover {
   color: #fff;
   background-image: linear-gradient(to right, #d500f9, #ffd54f);
 }
 
-.btn-white {
+.btnWhite {
   border-radius: 50px;
   color: #d500f9;
   background-color: #fff;
@@ -108,17 +58,9 @@ button:focus {
   border: 2px solid #d500f9 !important;
 }
 
-.btn-white:hover {
+.btnWhite:hover {
   color: #fff;
   background-image: linear-gradient(to right, #ffd54f, #d500f9);
-}
-
-a {
-  color: #000;
-}
-
-a:hover {
-  color: #000;
 }
 
 .bottom {
@@ -126,7 +68,7 @@ a:hover {
   margin-top: 50px !important;
 }
 
-.sm-text {
+.smText {
   font-size: 15px;
 }
 
