--- a/healify/src/Components/Signup.module.css
+++ b/healify/src/Components/Signup.module.css
@@ -1,5 +1,3 @@
-.container {
-}
 .card {
   border-radius: 0;
   border: none;
@@ -8,6 +6,7 @@
 .card1 {
   width: 50%;
   padding: 40px 30px 10px 30px;
+  background: #fff;
 }
 
 .card2 {
