--- a/healify/src/App.css
+++ b/healify/src/App.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   color: #000;
   overflow-x: hidden;
   height: 100%;
@@ -65,4 +65,4 @@ a {
 }
 a:hover {
   color: #eaf6f6;
-}
+} */
