--- a/healify/src/Components/Home.module.css
+++ b/healify/src/Components/Home.module.css
@@ -1,25 +1,26 @@
 .header {
   min-height: 100%;
+  display: flex;
+  align-items: flex-end;
 }
 .heading {
-  padding-left: 40%;
   text-align: center;
 }
 .logo {
   margin-left: 25px;
-  height: 100%;
+  height: 75px;
   width: 75px;
   border-radius: 50%;
-  float: left;
 }
-.login {
-  float: right;
+.settingsList {
+  margin: auto 0px;
+  column-gap: 10px;
+  margin-left: auto;
 }
-.heading,
-.logo,
-.login {
-  display: inline;
+.settingsList li {
+  border: black solid 1px;
 }
+
 .top-container {
   background-color: #cef1ec;
   position: relative;
@@ -53,6 +54,7 @@
 .img {
   width: 100%;
   opacity: 0.7;
+  max-height: 600px;
 }
 .card {
   background-color: white;
