--- a/healify/src/Components/Home.module.css
+++ b/healify/src/Components/Home.module.css
@@ -81,7 +81,8 @@
   padding: 10px;
 }
 .top-container {
-  background-color: #cef1ec;
+  /* background-color: #a4ccb5; */
+  background: rgb(247, 241, 241);
   position: relative;
 }
 .navv {
@@ -98,23 +99,21 @@
   padding: 20px 0;
 }
 .homecard {
-  background-color: white;
   color: #272727;
   padding: 20px;
   align-self: stretch;
-  border-radius: 10px;
+  border-radius: 20px;
   border: 0px;
   border-color: rgb(206, 184, 180);
   border-style: solid;
-  box-shadow: 2px 2px 4px 0px black;
   transition: 200ms;
   min-height: 100%;
 }
-
 .homecard:hover {
-  position: relative;
-  top: 10px;
-  right: 10px;
+  box-shadow: 0 2px 20px 0 #ccd2d8;
+  /* position: relative;
+  top: 5px;
+  right: 5px; */
 }
 .img img {
   width: 100%;
@@ -215,7 +214,8 @@
 }
 
 .mdbCustom {
-  margin: auto;
+  margin: 20px;
+  margin-bottom: 0px;
   padding: 20px;
   display: flex;
   justify-content: center;
