--- a/healify/src/Components/Home.module.css
+++ b/healify/src/Components/Home.module.css
@@ -69,7 +69,7 @@
 }
 .navLoginBtn:hover {
   box-shadow: 2px 2px 7px 2px rgb(95, 18, 18);
-  font-size: 20px;
+  font-size: 1.2em;
 }
 #navSignUp {
   border: none;
