--- a/healify/src/Components/Memes.module.css
+++ b/healify/src/Components/Memes.module.css
@@ -1,4 +1,4 @@
-/* .nsbtns
+.nsbtns
 {
     padding: 10px;
     margin: 30px;
@@ -8,4 +8,4 @@
   width:640px;
   height:370px;
   margin: auto;
-} */
+} 
