--- a/healify/src/Components/Milestones.module.css
+++ b/healify/src/Components/Milestones.module.css
@@ -5,18 +5,27 @@
   left: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  background: #1a1a1a;
-  color: #fff;
+  background:whitesmoke;
+  color:black;
+ 
+
 }
 
 .content-container {
-  padding-top: 20px;
+  padding-top: 800px;
+  height:100%;
+   color:rgb(43, 30, 25);
+   background-image: url('https://1technation.com/wp-content/uploads/2016/02/career-cover.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .sidebar-logo {
   padding: 10px 15px 10px 30px;
   font-size: 20px;
-  background-color: #2574a9;
+  background-color:gray;
+  color:white;
 }
 
 .sidebar-navigation {
@@ -37,7 +46,7 @@
 .sidebar-navigation li a {
   padding: 10px 15px 10px 30px;
   display: block;
-  color: #fff;
+  color:gray;
 }
 
 .sidebar-navigation li .fa {
@@ -52,7 +61,7 @@
 }
 
 .sidebar-navigation li::before {
-  background-color: #2574a9;
+  background-color:white;
   position: absolute;
   content: "";
   height: 100%;
@@ -69,9 +78,9 @@
 }
 
 .sidebar-navigation .header {
-  font-size: 12px;
+  font-size: 15px;
   text-transform: uppercase;
-  background-color: #151515;
+  background-color:whitesmoke;
   padding: 10px 15px 10px 30px;
 }
 
@@ -81,4 +90,14 @@
 
 .content-container {
   padding-left: 220px;
+  text-align: center;
+
+}
+.top-right {
+    position: absolute;
+  top: 50px;
+  right: 50px;
+    color:rgb(43, 30, 25);
+font-family: cursive, sans-serif;
+ 
 }
