Quiz Landing Page Created

--- a/healify/src/Components/Quiz.module.css
+++ b/healify/src/Components/Quiz.module.css
@@ -16,6 +16,11 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
+  background-color: white;
+}
+.quizBody {
+  height: 1000px;
+  background-color: rgb(243, 243, 247);
 }
 
 .quiztitle {
