--- a/healify/src/Components/QuizLanding.module.css
+++ b/healify/src/Components/QuizLanding.module.css
@@ -1,5 +1,4 @@
 .quizBody {
-  height: 1000px;
   background-color: rgb(243, 243, 247);
 }
 .topDiv {
@@ -15,6 +14,10 @@
   );
   padding: 2rem;
   text-align: center;
+}
+
+.topDiv p {
+  padding: 20px;
 }
 .img {
   height: 25%;
@@ -45,6 +48,12 @@
 }
 .heading {
   margin: auto;
-  padding-top: 50px;
-  padding-left: 165px;
+  padding: 20px 20px;
+  text-align: center;
+}
+
+@media screen and (max-width: 720px) {
+  .topDiv {
+    flex-wrap: wrap;
+  }
 }
