--- a/healify/src/Components/Quiz.module.css
+++ b/healify/src/Components/Quiz.module.css
@@ -17,6 +17,14 @@
   justify-content: start;
   background-color: white;
 }
+.heading {
+  text-align: center;
+  margin-bottom: 30px;
+  padding-top: 10px;
+}
+.counter {
+  text-align: center;
+}
 .quizBody {
   height: 1000px;
   background-color: rgb(243, 243, 247);
