--- a/healify/src/Components/Create.module.css
+++ b/healify/src/Components/Create.module.css
@@ -1,14 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-body {
+.apply {
   line-height: 1.5;
   font-weight: 300;
   background-image: linear-gradient(#22c1c3, #fdbb2d);
-  height: 100vh;
+  height: 120vh;
 }
 
 .note {
   max-width: 1000px;
-  margin: 3rem auto;
+  margin: 0rem auto;
   padding: 0 1.5rem;
 }
 
