modified news.module.css file

--- a/healify/src/Components/News/News.module.css
+++ b/healify/src/Components/News/News.module.css
@@ -52,10 +52,10 @@
   width: fit-content;
 }
 
-/* .news__author {
+ .news__author {
   margin-right: 10px;
   color: purple;
-}*/
+}
 
 .news__published {
   margin-right: 10px;
