modified news.module.css file

--- a/healify/src/Components/News/News.module.css
+++ b/healify/src/Components/News/News.module.css
@@ -1,4 +1,4 @@
-.bodyy,.news
+/* .bodyy,.news
 {
   margin: 0;
   padding: 0;
@@ -66,4 +66,4 @@
   display: inline-block;
   margin-top: 10px;
   color: rgb(122, 122, 122);
-} 
+}  */
