--- a/healify/src/Components/Milestones/Milestoneshome.module.css
+++ b/healify/src/Components/Milestones/Milestoneshome.module.css
@@ -1,134 +1,63 @@
-
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto+Condensed:400,400i,700,700i');
-section{
-    padding: 100px 10px;
-}
-.details-card {
-	background: #ecf0f1;
-}
-
-.card-content {
-	background: #ffffff;
-	border: 4px;
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-}
-
-
-.card-desc {
-	padding: 1.25rem;
-}
-
-.card-desc h3 {
-	color: #000000;
-    font-weight: 600;
-    font-size: 1.5em;
-    line-height: 1.3em;
-    margin-top: 0;
-    margin-bottom: 5px;
-    padding: 0;
-}
-
-.card-desc p {
-	color: #747373;
-    font-size: 14px;
-	font-weight: 400;
-	font-size: 1em;
-	line-height: 1.5;
-	margin: 0px;
-	margin-bottom: 20px;
-	padding: 0;
-	font-family: 'Raleway', sans-serif;
-}
-.btn-card{
-	background-color: #1ABC9C;
-	color: #fff;
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-    padding: .84rem 2.14rem;
-    font-size: .81rem;
-    -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
-    -o-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
-    margin: 0;
-    border: 0;
-    -webkit-border-radius: .120rem;
-    border-radius: .120rem;
-    cursor: pointer;
-    text-transform: uppercase;
-    white-space: normal;
-    word-wrap: break-word;
-    color: #fff;
-}
-.btn-card:hover {
-    background: orange;
-}
-a.btn-card {
-    text-decoration: none;
-    color: #fff;
-}
-
-.apply {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.nav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  opacity: 0.9;
-  overflow-x: hidden;
-  padding-top: 60px;
-  transition: 0.7s;
-}
-
-.nav a {
-  display: block;
-  padding: 20px 30px;
-  text-decoration: none;
-  color: #ccc;
-  font-size: 25px;
-}
-.nav a:hover {
-  color: #fff;
-  transition: 0.4s;
-}
-
-.nav .close {
-  position: absolute;
-  top: 0;
-  right: 22px;
-  margin-left: 50px;
-  font-size: 30px;
-}
-
-.slide a {
-  color: #000;
-  font-size: 36px;
-}
-
-#content {
-  padding: 20px;
-  transition: margin-left 0.7s;
-  overflow: hidden;
-}
-
-#main {
-  
+.header {
+  height: 150px;
   width: 100%;
-  height: 100vh;
-  background-position: center;
-  background-size: cover;
-  margin-bottom: 10px;
+  padding-top: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: #e9eef6;
 }
 
-#text {
-  width: 90%;
-  padding: 5%;
+.card-container {
+  height: 350px;
+  width: 350px;
+  box-shadow: 0px 3px 50px #a5a5a5;
+  padding: 40px 100px;
+}
+
+.card-wrapper {
+  width: 270px;
+  height: 200px;
+  margin: 20px;
+  border-bottom: 1px solid gray;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+  display: flex;
+  flex-direction: column;
+  font-size: medium;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.card-top {
+  width: 100%;
+  height: 2%;
+}
+
+.task-holder {
+  width: 100%;
+  height: 98%;
+  padding: 10px 10px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.card-header {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 2px;
+  max-width: 150px;
+  height: 30px;
+  padding: 1px 1px !important;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  text-align: center;
+}
+
+.task-container {
+  height: 700px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: white;
+  padding: 40px 80px;
 }
