--- a/healify/src/Components/Milestones/MilestonesHome.module.css
+++ b/healify/src/Components/Milestones/MilestonesHome.module.css
@@ -61,3 +61,13 @@
   background-color: white;
   padding: 40px 80px;
 }
+.navLoginBtn:hover {
+  box-shadow: 2px 2px 7px 2px whitesmoke;
+  font-size: 1.2em;
+}
+#navSignUp {
+  border: none;
+  background: black;
+  color:white;
+  padding: 5px;
+}
