added some styling for home page

--- a/healify/src/Components/Home/Home.module.css
+++ b/healify/src/Components/Home/Home.module.css
@@ -10,7 +10,10 @@
   top: 0px;
   z-index: 1;
 }
-
+.remove_underline
+{
+  text-decoration: none;
+}
 .whiteHeader {
   position: sticky;
   top: 0px;
