--- a/healify/src/Components/Quiz/Quiz.module.css
+++ b/healify/src/Components/Quiz/Quiz.module.css
@@ -17,7 +17,10 @@
   justify-content: start;
   background-color: white;
 }
-
+.remove_underline
+{
+  text-decoration: none;
+}
 .heading {
   text-align: center;
   margin-bottom: 30px;
