--- a/healify/src/Components/Milestones/MilestonesHome.module.css
+++ b/healify/src/Components/Milestones/MilestonesHome.module.css
@@ -1,14 +1,15 @@
 .heading {
-  height: 150px;
+  height: 200px;
   width: 100%;
   padding-top: 50px;
+  left: 50px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #e9eef6;
+  background-color: white;
 }
 
 .card-container {
-  height: 350px;
-  width: 350px;
+  height: 200px;
+  width: 200px;
   box-shadow: 0px 3px 50px #a5a5a5;
   padding: 40px 100px;
 }
@@ -16,7 +17,8 @@
 .card-wrapper {
   width: 270px;
   height: 200px;
-  margin: 20px;
+  margin: 150px;
+  
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
@@ -54,7 +56,7 @@
 }
 
 .task-container {
-  height: 700px;
+  height: 800px;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
