--- a/healify/src/Components/Milestones/MilestonesHome.module.css
+++ b/healify/src/Components/Milestones/MilestonesHome.module.css
@@ -1,11 +1,4 @@
-.heading {
-  height: 200px;
-  width: 100%;
-  padding-top: 50px;
-  left: 50px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: white;
-}
+
 
 .card-container {
   height: 200px;
@@ -17,8 +10,8 @@
 .card-wrapper {
   width: 270px;
   height: 200px;
-  margin: 150px;
-  
+  margin-left: 150px;
+  margin-bottom: 50px;
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
@@ -36,8 +29,8 @@
 
 .task-holder {
   width: 100%;
-  height: 98%;
-  padding: 10px 10px;
+  height: 100%;
+  padding: 5px 5px;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -56,7 +49,7 @@
 }
 
 .task-container {
-  height: 800px;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
