--- a/healify/src/Components/News/News.module.css
+++ b/healify/src/Components/News/News.module.css
@@ -1,3 +1,62 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
+
+.searchbody {
+    border-radius: 0rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300
+}
+
+.showcase
+{
+  background: url(https://images.pexels.com/photos/177557/pexels-photo-177557.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) no-repeat right/cover;
+  height: 550px;
+}
+
+.showcase .overlay
+{
+  background-color: rgba(0,0,0,0.4);
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.height {
+    height: 100vh
+}
+
+.search {
+    position: relative;
+    box-shadow: 0 0 40px rgba(51, 51, 51, .1)
+}
+
+.searchinput {
+    height: 60px;
+    text-indent: 25px;
+    border: 2px solid #d6d4d4
+}
+
+.searchinput:focus {
+    box-shadow: none;
+    border: 2px solid blue
+}
+
+.search .fasearch {
+    position: absolute;
+    top: 20px;
+    left: 16px
+}
+
+.searchbtn {
+   border-radius: 5rem;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    height: 50px;
+    width: 110px;
+    background: blue
+}
+
 .bodyy,
 .news {
   margin: 0;
@@ -6,7 +65,8 @@
 }
 
 .bodyy {
-  font-family: inter;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   width: 85%;
   margin: auto;
   background: rgb(251, 254, 255);
@@ -21,7 +81,7 @@
 
 .news {
   margin: 1%;
-  max-width: 400px;
+  max-width: 450px;
   padding: 30px;
   border: 1px solid lightgray;
   border-radius: 5px;
@@ -33,7 +93,10 @@
   color: blue;
 }
 .news__image {
-  width: 350px;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+
+  width: 400px;
   height: 400px;
   padding: 15px;
 }
