--- a/healify/src/Components/News/News.module.css
+++ b/healify/src/Components/News/News.module.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
 
 .searchbody {
     border-radius: 0rem;
@@ -132,4 +132,4 @@
   display: inline-block;
   margin-top: 10px;
   color: rgb(122, 122, 122);
-} */
+}
