--- a/healify/src/Components/Milestones/Timeline.module.css
+++ b/healify/src/Components/Milestones/Timeline.module.css
@@ -135,7 +135,7 @@
 
 .timeline-item-content .circle {
   background-color: #fff;
-  border: 3px solid #e17b77;
+  border: 3px solid #806e6e;
   border-radius: 50%;
   position: absolute;
   top: calc(50% - 10px);
