--- a/healify/src/Components/Milestones/MilestonesHome.module.css
+++ b/healify/src/Components/Milestones/MilestonesHome.module.css
@@ -15,16 +15,17 @@
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
+ 
   display: flex;
   flex-direction: column;
   font-size: medium;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 .card-top {
   width: 100%;
-  height: 1.25%;
+  height: 1.23%;
 }
 
 .task-holder {
@@ -117,4 +118,9 @@
 
 .applyall {
     background: linear-gradient(to right, #d9a7c7, #fffcdc)
+}
+
+.read-or-hide{
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: 700;
 }
