--- a/healify/src/Components/Home/Home.module.css
+++ b/healify/src/Components/Home/Home.module.css
@@ -30,6 +30,20 @@
   background: white;
   transition: background-color 0.5s;
 }
+
+.whiteHeader div a div h1 {
+  color: black;
+  text-shadow: 0.5px 0.5px 3px rgb(0, 0, 0);
+}
+
+.whiteHeader div a div h1:hover {
+  text-shadow: 1px 1px 6px white;
+}
+
+/* .whiteHeader div a img:hover {
+  text-shadow: 1px 1px 6px rgb(0, 0, 0);
+} */
+
 .container {
   background: rgb(255, 255, 255);
 }
@@ -49,6 +63,7 @@
   display: none;
   margin: auto 2px;
 }
+
 .threeLineBtn img {
   height: 40px;
   width: 40px;
@@ -62,6 +77,7 @@
   border-radius: 15%;
   border: 4px solid #9c6614;
 }
+
 .menuBtnCustom li {
   border-radius: 5px;
   margin: 2px;
@@ -73,16 +89,36 @@
 .menuBtnCustom:hover {
   background: rgb(255, 255, 255);
 }
+
 .heading {
   text-align: center;
   margin: 10px;
   font-family: "Josefin Sans", sans-serif;
+  color: white;
+  text-shadow: 1px 1px 3px rgb(0, 0, 0);
+}
+.heading:hover {
+  text-shadow: 1px 1px 6px rgb(14, 14, 13);
 }
 .logo {
   margin-left: 25px;
   height: 75px;
   width: 75px;
   border-radius: 50%;
+  border: rgb(255, 255, 255) solid 3px;
+}
+
+.logo:hover {
+  animation: borderGrow 0.5s 1 forwards;
+}
+
+@keyframes borderGrow {
+  0% {
+    border: rgb(255, 255, 255) solid 3px;
+  }
+  100% {
+    border: rgb(255, 255, 255) solid 5px;
+  }
 }
 .settingsList {
   margin: auto 0px;
@@ -153,7 +189,7 @@
 }
 .img {
   position: relative;
-  background: rgb(115, 189, 128);
+  background: rgb(3, 8, 4);
   display: flex;
   justify-content: center;
 }
@@ -186,96 +222,7 @@
     opacity: 1;
   }
 }
-.card {
-  background-color: white;
-  color: #272727;
-  padding: 20px;
-  align-self: center;
-  border-radius: 10px;
-  border: 0px;
-  border-color: rgb(206, 184, 180);
-  border-style: solid;
-  transition: 200ms;
-  max-width: 380px;
-  display: inline;
-}
 
-.card:hover {
-  transition: 200ms;
-  border: 3px;
-  border-color: tomato;
-  border-style: solid;
-}
-
-.card-header {
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-}
-
-.profile {
-  width: 2.5rem;
-  height: 2.5rem;
-  background-color: tomato;
-  border-radius: 50%;
-  margin: 10px;
-  font-size: 20pt;
-  text-align: center;
-  font-weight: bold;
-  color: white;
-  justify-content: center;
-}
-
-.letter {
-  vertical-align: middle;
-}
-
-.card-title-group {
-  justify-content: center;
-}
-
-.card-title {
-  flex: 0.5;
-  font-size: large;
-  margin-bottom: 0;
-  margin-top: 0;
-}
-.card-date {
-  flex: 0.3;
-  font-size: small;
-  margin-top: 0;
-}
-
-.card-image {
-  border-radius: 10px;
-  margin-bottom: 10px;
-  height: 20px;
-
-  margin-top: 10px;
-}
-.card-like-icon {
-  height: 25px;
-}
-
-.card-text {
-  width: 350px;
-  font-size: medium;
-}
-
-.card-like-bar {
-  display: flex;
-  align-items: center;
-  margin-top: 20px;
-  justify-content: space-between;
-}
-.like-text {
-  font-size: small;
-  margin-left: 10px;
-}
-.booklist {
-  grid-template-columns: repeat(2, 1fr);
-  /* align-items: start; */
-}
 .footer-link {
   padding: 5px;
 }
@@ -313,17 +260,35 @@
     flex-direction: column;
     align-items: flex-start;
   }
+
+  .rotate {
+    animation: rotateToggle 1s 1 both;
+  }
+  @keyframes rotateToggle {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(90deg);
+    }
+  }
+  .rotateReset {
+    animation: rotateReset 1s 1 both;
+  }
+  @keyframes rotateReset {
+    0% {
+      transform: rotate(90deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+
   .threeLineBtn {
     display: inline;
   }
 
   .logo {
     margin-left: 15px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .header {
-    position: static;
   }
 }
