--- a/healify/src/Components/Milestones/MilestonesHome.module.css
+++ b/healify/src/Components/Milestones/MilestonesHome.module.css
@@ -6,7 +6,9 @@
   box-shadow: 0px 3px 50px #a5a5a5;
   padding: 40px 100px;
 }
-
+.remove_underline {
+  text-decoration: none;
+}
 .card-wrapper {
   width: 270px;
   height: 220px;
