--- a/healify/src/Components/OrganizersHome/Eventsstyle.module.css
+++ b/healify/src/Components/OrganizersHome/Eventsstyle.module.css
@@ -1,4 +1,4 @@
-/* 
+
 .ribbon {
   position: absolute;
   right: -5px;
@@ -70,4 +70,4 @@
 .blue span::after {
   border-right-color: #1e5799;
   border-top-color: #1e5799;
-} */
+}
