--- a/healify/src/Components/Milestones/MilestonesHome.module.css
+++ b/healify/src/Components/Milestones/MilestonesHome.module.css
@@ -1,3 +1,7 @@
+.flexWrapper {
+  display: flex;
+}
+
 .card-container {
   height: 200px;
   width: 180px;
@@ -7,18 +11,18 @@
 
 .card-wrapper {
   width: 280px;
-  height: 200px;
-  margin-left: 150px;
+  height: 230px;
+  margin-left: 50px;
   margin-bottom: 50px;
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
- 
+
   display: flex;
   flex-direction: column;
   font-size: medium;
   font-weight: 500;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .card-top {
@@ -53,7 +57,7 @@
   display: flex;
   flex-wrap: wrap;
   background-color: white;
-  padding: 40px 80px;
+  padding: 20px 20px;
 }
 .navLoginBtn:hover {
   box-shadow: 2px 2px 7px 2px whitesmoke;
@@ -62,63 +66,63 @@
 #navSignUp {
   border: none;
   background: black;
-  color:white;
+  color: white;
   padding: 5px;
 }
 .progress-title {
-    font-size: 16px;
-    font-weight: 700;
-    color: #333;
-    margin: 0 0 20px
+  font-size: 16px;
+  font-weight: 700;
+  color: #333;
+  margin: 0 0 20px;
 }
 
 .progress {
-    height: 20px;
-    background: #333;
-    border-radius: 0;
-    box-shadow: none;
-    margin-bottom: 30px;
-    overflow: visible
+  height: 20px;
+  background: #333;
+  border-radius: 0;
+  box-shadow: none;
+  margin-bottom: 30px;
+  overflow: visible;
 }
 
 .progress .progress-bar {
-    position: relative;
-    -webkit-animation: animate-positive 2s;
-    animation: animate-positive 2s
+  position: relative;
+  -webkit-animation: animate-positive 2s;
+  animation: animate-positive 2s;
 }
 
 .progress .progress-value {
-    display: block;
-    font-size: 18px;
-    font-weight: 500;
-    color: black;
-    position: absolute;
-    top: -30px;
-    right: -25px
+  display: block;
+  font-size: 18px;
+  font-weight: 500;
+  color: black;
+  position: absolute;
+  top: -30px;
+  right: -25px;
 }
 
 .progress .progress-bar:after {
-    content: "";
-    display: inline-block;
-    width: 10px;
-    background: #fff;
-    position: absolute;
-    top: -10px;
-    bottom: -10px;
-    right: -5px;
-    z-index: 1;
-    transform: rotate(35deg)
+  content: "";
+  display: inline-block;
+  width: 10px;
+  background: #fff;
+  position: absolute;
+  top: -10px;
+  bottom: -10px;
+  right: -5px;
+  z-index: 1;
+  transform: rotate(35deg);
 }
 
 .h1 {
-    text-align: center
+  text-align: center;
 }
 
 .applyall {
-    background: linear-gradient(to right, #d9a7c7, #fffcdc)
+  background: linear-gradient(to right, #d9a7c7, #fffcdc);
 }
 
-.read-or-hide{
-  font-family:Arial, Helvetica, sans-serif;
+.read-or-hide {
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
 }
