--- a/healify/src/App.css
+++ b/healify/src/App.css
@@ -60,3 +60,25 @@ a:hover {
   box-shadow: 2px 2px 7px 2px rgb(95, 18, 18);
   font-size: 1.2em;
 }
+
+.warning {
+  font: bold 1.8em sans-serif;
+  color: rgb(0, 0, 0);
+  text-shadow: 1px 1px 1px rgb(172, 55, 146);
+  text-align: center;
+  text-decoration: rgb(172, 55, 146) underline solid;
+  /* animation: warningFade 3s forwards; */
+}
+
+/* @keyframes warningFade {
+  0% {
+    opacity: 0.1;
+  }
+  20%,
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+} */
