--- a/healify/src/Components/Home/Home.module.css
+++ b/healify/src/Components/Home/Home.module.css
@@ -13,7 +13,7 @@
 }
 .maindiv {
   background: rgb(238, 232, 232);
-  padding-bottom: 300px;
+  padding-bottom: 10px;
 }
 .bottom-container {
   /* background-color: #32bbd3;*/
@@ -49,6 +49,12 @@
   background: rgb(3, 8, 4);
   display: flex;
   justify-content: center;
+
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 5px;
+  text-align: center;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
 }
 .img img {
   position: relative;
@@ -95,16 +101,43 @@
 }
 
 .mdbCustom {
-  margin: 120px;
+  /* margin: 120px; */
   margin-bottom: 0px;
-  padding: 20px;
+  /* padding: 20px; */
   display: flex;
   gap: 80px;
   justify-content: space-evenly;
   flex-wrap: wrap;
+
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 5px;
+  text-align: center;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  padding: 20px 40px;
 }
 .mdbCustom a {
   flex-basis: 275px;
+}
+
+.blur {
+  margin: 10px;
+  flex-direction: row;
+  background-image: url(https://img.freepik.com/free-photo/top-view-background-beautiful-white-grey-brown-cream-blue-background_140725-72219.jpg?size=626&ext=jpg),
+    linear-gradient(rgb(219, 166, 166), rgb(0, 0, 172));
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.blurImage {
+  margin: 10px;
+  flex-direction: row;
+  background-image: url("https://www.verywellmind.com/thmb/33e7FO-jy7abF2uIgqsfkiia7J8=/2780x1564/smart/filters:no_upscale()/mental-health-tracker-banner-03-db4c074daa7f4b719dfec6b4b4279c2d.png"),
+    linear-gradient(rgb(219, 166, 166), rgb(0, 0, 172));
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media screen and (max-width: 600px) {
