--- a/healify/src/Components/Milestones/MilestonesHome.module.css
+++ b/healify/src/Components/Milestones/MilestonesHome.module.css
@@ -126,3 +126,11 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
 }
+
+.viewBtn {
+  background: rgb(121, 110, 110);
+  color: white;
+  padding: 2px;
+  margin: 2px;
+  text-align: center;
+}
