--- a/healify/src/Components/Home/Header.module.css
+++ b/healify/src/Components/Home/Header.module.css
@@ -161,6 +161,16 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    animation: growOnce 2s forwards;
+  }
+
+  @keyframes growOnce {
+    0% {
+      opacity: 0.1;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 
   .rotate {
