--- a/healify/src/Components/ColorGame/ColorGame.module.css
+++ b/healify/src/Components/ColorGame/ColorGame.module.css
@@ -4,7 +4,7 @@
 }
 
 .leveltitle {
-  font-family: "Press Start 2P", cursive;
+  font-family: "Press Start 2P", Arial;
   font-size: 3rem;
   color: #fef2bf;
 }
