--- a/healify/src/Components/News/News.module.css
+++ b/healify/src/Components/News/News.module.css
@@ -1,61 +1,60 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
 
 .searchbody {
-    border-radius: 0rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300
+  border-radius: 0rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
 }
 
-.showcase
-{
-  background: url(https://images.pexels.com/photos/177557/pexels-photo-177557.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) no-repeat right/cover;
+.showcase {
+  background: url(https://images.pexels.com/photos/177557/pexels-photo-177557.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)
+    no-repeat right/cover;
   height: 550px;
 }
 
-.showcase .overlay
-{
-  background-color: rgba(0,0,0,0.4);
+.showcase .overlay {
+  background-color: rgba(0, 0, 0, 0.4);
   height: 550px;
   display: flex;
   flex-direction: column;
-  
+
   justify-content: center;
 }
 .height {
-    height: 100vh
+  height: 100vh;
 }
 
 .search {
-    position: absolute;
-    box-shadow: 0 0 40px rgba(51, 51, 51, .1)
+  position: absolute;
+  box-shadow: 0 0 40px rgba(51, 51, 51, 0.1);
 }
 
 .searchinput {
-   width: 500px;
-    height: 60px;
-    text-indent: 25px;
-    border: 2px solid #d6d4d4
+  width: 500px;
+  height: 60px;
+  text-indent: 25px;
+  border: 2px solid #d6d4d4;
 }
 
 .searchinput:focus {
-    box-shadow: none;
-    border: 2px solid rgb(15, 15, 190)
+  box-shadow: none;
+  border: 2px solid rgb(15, 15, 190);
 }
 
 .search .fasearch {
-    position: absolute;
-    top: 20px;
-    left: 16px
+  position: absolute;
+  top: 20px;
+  left: 16px;
 }
 
 .searchbtn {
-   border-radius: 5rem;
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    height: 50px;
-    width: 110px;
-    background: blue
+  border-radius: 5rem;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  height: 50px;
+  width: 110px;
+  background: blue;
 }
 
 .bodyy,
@@ -66,8 +65,8 @@
 }
 
 .bodyy {
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   width: 85%;
   margin: auto;
   background: rgb(251, 254, 255);
@@ -82,12 +81,10 @@
 
 .news {
   margin: 1%;
-  max-width: 450px;
-  padding: 30px;
+  max-width: 400px;
   border: 1px solid lightgray;
   border-radius: 5px;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
 }
 .readmore {
@@ -97,9 +94,9 @@
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
 
-  width: 400px;
-  height: 400px;
-  padding: 15px;
+  width: 100%;
+  height: 45%;
+  /* padding: 15px; */
 }
 .news__title {
   padding-bottom: 10px;
@@ -130,7 +127,14 @@
 
 .news__source,
 .news__published {
-  display: inline-block;
+  /* display: inline-block; */
+  display: block;
   margin-top: 10px;
   color: rgb(122, 122, 122);
+}
+
+.contentWrapper {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
 }
