--- a/healify/src/Components/News/News.module.css
+++ b/healify/src/Components/News/News.module.css
@@ -67,7 +67,7 @@
 .bodyy {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  width: 85%;
+  width: 100%;
   margin: auto;
   background: rgb(251, 254, 255);
 }
@@ -75,13 +75,14 @@
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   margin: auto;
+  gap: 30px;
 }
 
 .news {
   margin: 1%;
-  max-width: 400px;
+  max-width: 300px;
   border: 1px solid lightgray;
   border-radius: 5px;
   display: flex;
@@ -137,4 +138,15 @@
   margin: 10px;
   display: flex;
   flex-direction: column;
+}
+
+.page {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page label {
+  margin: 10px;
 }
